adding android meta scale

--- a/main.html
+++ b/main.html
@@ -9,6 +9,9 @@
 		<meta name="keywords" content="HIV, AIDS, gov, government, schedule, regimen, generator">
 		<meta name="author" content="McMaster University Computer Science Capstone Team 14">
 		
+		<!-- auto scales on phones -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+		
 		<!-- defining browser details and linking to css-->
 		<title> HRV.org </title>
 		<link type="text/css" rel="stylesheet" href="css/main.css"/>
