Added form page

--- a/main.html
+++ b/main.html
@@ -1,4 +1,5 @@
 
+<!-- The Main Page of HRG.org -->
 <!DOCTYPE html>
 <html>
 
@@ -35,9 +36,8 @@
 			<!-- main logo -->
 			<img id="logo" src="images/logo.png" height="250" width="650" alt="main logo">
 			<br>
-			<span id="myspan"> </span>
 			<!-- button for going to 'form' page -->
-			<img id="start-button" src="images/start.png" height="50" width="200" alt="start" onmouseover="this.src='images/start_hover.png'; changeFirst(true); document.getElementById('mysound').play();" onmouseout="this.src='images/start.png'; changeFirst(false); document.getElementById('mysound').pause();">
+			<a href="form.html"> <img id="start-button" src="images/start.png" height="50" width="200" alt="start" onmouseover="this.src='images/start_hover.png'; changeFirst(true); document.getElementById('mysound').play();" onmouseout="this.src='images/start.png'; changeFirst(false); document.getElementById('mysound').pause();"> </a>
 
 			
 			<script type="text/javascript" language="javascript">
